--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ env:
   matrix:
    - DJANGO="django==1.8.18"
    - DJANGO="django==1.8.18" WITH_WQDB="pip install wq.db==1.0.0"
-   - DJANGO="django==1.11.3"
-   - DJANGO="django==1.11.3" WITH_WQDB="pip install wq.db==1.0.0"
-   - DJANGO="django==1.11.3" WITH_WQDB="pip install wq.db==1.0.0" WITH_REVERSION="pip install django-reversion"
-   - DJANGO="django==1.11.3" LINT="pip install flake8"
+#   - DJANGO="django==1.11.3"
+#   - DJANGO="django==1.11.3" WITH_WQDB="pip install wq.db==1.0.0"
+#   - DJANGO="django==1.11.3" WITH_WQDB="pip install wq.db==1.0.0" WITH_REVERSION="pip install django-reversion"
+#   - DJANGO="django==1.11.3" LINT="pip install flake8"
 before_script:
  - createdb -Upostgres data_wizard_test
  - psql -Upostgres data_wizard_test -c "CREATE EXTENSION postgis;"
